--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,18 @@
   box-sizing: border-box;
 }
 
+html {
+    font-family: 'Bilbo Swash Caps', cursive;
+}
+
+#app img {
+    display: block;
+}
+
+.center {
+    margin: 0 auto;
+}
+
+.w-80 {
+    width: min(700px, 80%);
+}
